[package]
name = "oxide-7"
version = "0.1.0"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
vulkano = "0.14"
vulkano-shaders = "0.14"
vulkano-win = "0.14"
winit = "0.19"
cgmath = "0.17"
chrono = "0.4"