[package]
name = "oxide-7"
version = "0.1.0"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"
default-run = "oxide7-bin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oxide7"
path = "src/lib.rs"

[[bin]]
name = "oxide7-bin"
path = "src/bin/main.rs"
required-features = ["debug"]

[dependencies]
bitflags = "1.1.0"
vulkano = "0.16"
vulkano-shaders = "0.16"
vulkano-win = "0.16"
winit = "0.19"
cgmath = "0.17"
chrono = "0.4"
crossbeam-channel = "0.4.2"
fixed = "0.5.4"
cpal = "0.11"

[features]
debug = []