[package]
name = "oxide-7"
version = "0.3.0"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oxide7"
path = "src/lib.rs"

[dependencies]
bitflags = "1.1.0"
crossbeam-channel = "0.4.2"
fixed = "0.5.4"
sample = "0.10"

[features]
debug = []